tests/ui/typeck/while-loop-block-cond.rs
fn main() {
    while {} {}
    //~^ ERROR mismatched types [E0308]
}

// ferrocene-annotations: fls_lv7w7aalpwm5
// Type Inference
//
// ferrocene-annotations: fls_exe4zodlwfez
// Type Unification
